--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Booru\Safebooru.cs" />
     <Compile Include="Booru\Yandere.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search\InvalidTags.cs" />
     <Compile Include="Search\Rating.cs" />
     <Compile Include="Search\SearchResult.cs" />
   </ItemGroup>
