--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Booru\Booru.cs" />
+    <Compile Include="Booru\Custom\CustomBooru.cs" />
+    <Compile Include="Booru\Custom\InvalidBooru.cs" />
     <Compile Include="Booru\E621.cs" />
     <Compile Include="Booru\Gelbooru.cs" />
     <Compile Include="Booru\Konachan.cs" />
