--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Booru\Booru.cs" />
-    <Compile Include="Booru\Custom\BooruOptions.cs" />
+    <Compile Include="Booru\BooruOptions.cs" />
     <Compile Include="Booru\Custom\CustomBooru.cs" />
     <Compile Include="Booru\Custom\InvalidBooru.cs" />
     <Compile Include="Booru\E621.cs" />
@@ -53,13 +53,16 @@
     <Compile Include="Booru\UrlFormat.cs" />
     <Compile Include="Booru\Yandere.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ImageSearch\Booru.cs" />
-    <Compile Include="ImageSearch\InvalidTags.cs" />
-    <Compile Include="ImageSearch\Rating.cs" />
-    <Compile Include="ImageSearch\SearchResult.cs" />
-    <Compile Include="TagSearch\Booru.cs" />
-    <Compile Include="TagSearch\SearchResult.cs" />
-    <Compile Include="TagSearch\TagType.cs" />
+    <Compile Include="Search\Image\Booru.cs" />
+    <Compile Include="Search\InvalidTags.cs" />
+    <Compile Include="Search\Image\Rating.cs" />
+    <Compile Include="Search\Image\SearchResult.cs" />
+    <Compile Include="Search\Tag\Booru.cs" />
+    <Compile Include="Search\Tag\SearchResult.cs" />
+    <Compile Include="Search\Tag\TagType.cs" />
+    <Compile Include="Search\Wiki\Booru.cs" />
+    <Compile Include="Search\Wiki\NoWiki.cs" />
+    <Compile Include="Search\Wiki\SearchResult.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
