--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Booru\Custom\CustomBooru.cs" />
     <Compile Include="Booru\Custom\InvalidBooru.cs" />
     <Compile Include="Booru\E621.cs" />
+    <Compile Include="Booru\E926.cs" />
     <Compile Include="Booru\Gelbooru.cs" />
     <Compile Include="Booru\Konachan.cs" />
     <Compile Include="Booru\Lolibooru.cs" />
