--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Booru\Safebooru.cs" />
     <Compile Include="Booru\Sakugabooru.cs" />
     <Compile Include="Booru\UrlFormat.cs" />
+    <Compile Include="Booru\Xbooru.cs" />
     <Compile Include="Booru\Yandere.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\Comment\Booru.cs" />
