--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -40,9 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Booru\Atfbooru.cs" />
     <Compile Include="Booru\Booru.cs" />
     <Compile Include="Booru\BooruOptions.cs" />
     <Compile Include="Booru\Custom\CustomBooru.cs" />
+    <Compile Include="Booru\DanbooruDonmai.cs" />
     <Compile Include="Booru\E621.cs" />
     <Compile Include="Booru\E926.cs" />
     <Compile Include="Booru\Furrybooru.cs" />
