Switch project to .NET Core

--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -77,7 +77,11 @@
     <Compile Include="Search\Wiki\SearchResult.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="NuGet.CommandLine">
+      <Version>4.7.0</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
