--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -1,87 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{76215AC0-5BEB-4B79-AE41-0027400900FB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BooruSharp</RootNamespace>
-    <AssemblyName>BooruSharp</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Booru\Atfbooru.cs" />
-    <Compile Include="Booru\Booru.cs" />
-    <Compile Include="Booru\BooruAuth.cs" />
-    <Compile Include="Booru\BooruOptions.cs" />
-    <Compile Include="Booru\Custom\CustomBooru.cs" />
-    <Compile Include="Booru\DanbooruDonmai.cs" />
-    <Compile Include="Booru\E621.cs" />
-    <Compile Include="Booru\E926.cs" />
-    <Compile Include="Booru\Furrybooru.cs" />
-    <Compile Include="Booru\Gelbooru.cs" />
-    <Compile Include="Booru\Konachan.cs" />
-    <Compile Include="Booru\Lolibooru.cs" />
-    <Compile Include="Booru\Realbooru.cs" />
-    <Compile Include="Booru\Rule34.cs" />
-    <Compile Include="Booru\Safebooru.cs" />
-    <Compile Include="Booru\Sakugabooru.cs" />
-    <Compile Include="Booru\UrlFormat.cs" />
-    <Compile Include="Booru\Xbooru.cs" />
-    <Compile Include="Booru\Yandere.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Search\AuthentificationRequired.cs" />
-    <Compile Include="Search\Comment\Booru.cs" />
-    <Compile Include="Search\Comment\SearchResult.cs" />
-    <Compile Include="Search\Post\Booru.cs" />
-    <Compile Include="Search\InvalidTags.cs" />
-    <Compile Include="Search\Post\Rating.cs" />
-    <Compile Include="Search\Post\SearchResult.cs" />
-    <Compile Include="Search\Related\Booru.cs" />
-    <Compile Include="Search\Related\SearchResult.cs" />
-    <Compile Include="Search\Tag\Booru.cs" />
-    <Compile Include="Search\Tag\SearchResult.cs" />
-    <Compile Include="Search\Tag\TagType.cs" />
-    <Compile Include="Search\Wiki\Booru.cs" />
-    <Compile Include="Search\FeatureUnavailable.cs" />
-    <Compile Include="Search\Wiki\SearchResult.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="NuGet.CommandLine">
-      <Version>4.7.0</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
