--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -13,7 +13,7 @@
     <RepositoryUrl>https://github.com/Xwilarg/BooruSharp</RepositoryUrl>
     <RepositoryType>Library</RepositoryType>
     <PackageReleaseNotes>Add SankakuComplex, fix E621 and E926</PackageReleaseNotes>
-    <PackageTags>Booru Gelbooru Image C-Sharp Atfbooru DanbooruDonmai Danbooru E621 E926 FurryBooru Konachan Lolibooru Realbooru Rule34 Safebooru Sakugabooru Xbooru Yandere</PackageTags>
+    <PackageTags>Booru Gelbooru Image C-Sharp Atfbooru DanbooruDonmai Danbooru E621 E926 FurryBooru Konachan Lolibooru Realbooru Rule34 SankakuComplex Safebooru Sakugabooru Xbooru Yandere</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
