--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
         dotnet-version: 3.1.101
     - name: Setup Chocolatey
       uses: crazy-max/ghaction-chocolatey@v1
+        with:
+          args: -h
     - name: Install dependencies
       run: dotnet restore
     - name: Build
