--- a/BooruSharp.UnitTests/BooruSharp.UnitTests.csproj
+++ b/BooruSharp.UnitTests/BooruSharp.UnitTests.csproj
@@ -1,7 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BooruSharp\BooruSharp.csproj" />
   </ItemGroup>
 
 </Project>
