--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,7 @@ jobs:
       run: dotnet restore
     - name: Install OpenCover
       run: choco install opencover.portable
-    - name: Install Codecov
-      run: choco install codecov
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Test
-      run: OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:test -filter:"+[BooruSharp*]* -[BooruSharp.UnitTests*]*" -output:"coverage.xml" -oldstyle
+      run: OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:test -filter:"+[BooruSharp*]* -[BooruSharp.UnitTests*]*" -oldstyle
