Fix english in function names and add properties for Auth and HttpClient

--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.6.1</Version>
+    <Version>2.7.0</Version>
     <Authors>Xwilarg</Authors>
     <Company />
     <Description>BooruSharp is a C# library to browse Booru websites (Gelbooru, Konachan, etc...) easily</Description>
@@ -12,7 +12,7 @@
     <PackageProjectUrl>https://github.com/Xwilarg/BooruSharp</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Xwilarg/BooruSharp</RepositoryUrl>
     <RepositoryType>Library</RepositoryType>
-    <PackageReleaseNotes>Add GetPostByIdAsync</PackageReleaseNotes>
+    <PackageReleaseNotes>Fix english in function names and add properties for Auth and HttpClient</PackageReleaseNotes>
     <PackageTags>Booru Gelbooru Image C-Sharp Atfbooru DanbooruDonmai Danbooru E621 E926 FurryBooru Konachan Lolibooru Realbooru Rule34 SankakuComplex Safebooru Sakugabooru Xbooru Yandere</PackageTags>
   </PropertyGroup>
 
