--- a/BooruSharp.Other/BooruSharp.Others.csproj
+++ b/BooruSharp.Other/BooruSharp.Others.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BooruSharp\BooruSharp.csproj" />
   </ItemGroup>
 
