--- a/BooruSharp.Other/BooruSharp.Others.csproj
+++ b/BooruSharp.Other/BooruSharp.Others.csproj
@@ -16,11 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BooruSharp" Version="2.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BooruSharp\BooruSharp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
