--- a/BooruSharp.Others/BooruSharp.Others.csproj
+++ b/BooruSharp.Others/BooruSharp.Others.csproj
@@ -16,7 +16,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BooruSharp" Version="2.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
@@ -25,6 +24,13 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(CI)'=='true'">
+    <ProjectReference Include="..\BooruSharp\BooruSharp.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(CI)'!='true'">
+    <PackageReference Include="BooruSharp" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
