--- a/BooruSharp.Others/BooruSharp.Others.csproj
+++ b/BooruSharp.Others/BooruSharp.Others.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.2.0-beta</Version>
+    <Version>1.3.0-beta</Version>
     <Authors>Xwilarg</Authors>
     <Company>Xwilarg</Company>
     <Description>Extension of BooruSharp to handle non-booru websites and handle them like the others</Description>
