Update GitHub CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Test
-      run: dotnet test || true
+      run: dotnet test --no-restore --verbosity normal
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
