--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,8 @@ jobs:
         XBOORU_PASSWORD_HASH: ${{ secrets.XBOORU_PASSWORD_HASH }}
         YANDERE_USER_ID: ${{ secrets.YANDERE_USER_ID }}
         YANDERE_PASSWORD_HASH: ${{ secrets.YANDERE_PASSWORD_HASH }}
-        PIXIV_USER_ID: ${{ secrets.PIXIV_ACCESS_TOKEN }}
-        PIXIV_PASSWORD: ${{ secrets.PIXIV_REFRESH_TOKEN }}
+        PIXIV_ACCESS_TOKEN: ${{ secrets.PIXIV_ACCESS_TOKEN }}
+        PIXIV_REFRESH_TOKEN: ${{ secrets.PIXIV_REFRESH_TOKEN }}
       run: dotnet test --no-restore --verbosity normal --collect:"XPlat Code Coverage"
     - name: Copy coverage
       run: sh copy_coverage.sh
