--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Test
       env:
         TWIBOORU_USER_ID: ""
-        TWIBOORU_PASSWORD_HASH: ${{ secrets.DERPIBOORU_PASSWORD_HASH }}
+        TWIBOORU_PASSWORD_HASH: ${{ secrets.TWIBOORU_PASSWORD_HASH }}
         DERPIBOORU_USER_ID: ""
         DERPIBOORU_PASSWORD_HASH: ${{ secrets.DERPIBOORU_PASSWORD_HASH }}
         PONYBOORU_USER_ID: ""
