--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -23,6 +23,8 @@ jobs:
       uses: github/codeql-action/init@v1
     - name: Install dependencies
       run: dotnet restore
+    - name: Install docfx
+      run: choco install docfx -y
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Generate documentation
