--- a/BooruSharp/BooruSharp.csproj
+++ b/BooruSharp/BooruSharp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>4.0.0</Version>
+    <Version>4.0.0-beta</Version>
     <Authors>Xwilarg</Authors>
     <Company />
     <Description>BooruSharp is a C# library to browse Booru websites (Gelbooru, Konachan, etc...) easily</Description>
